--- a/index.html
+++ b/index.html
@@ -41,15 +41,16 @@
             <picture class="location-map">
               <source
                 media="(min-width: 375px) and (max-width: 768px)"
-                srcset="./images/map-tab-x1.jpg"
+                srcset="./images/map-tab-x1.jpg 1x, ./images/map-tab-x2.jpg 2x"
               />
               <source
                 media="(min-width: 769px)"
-                srcset="./images/map-desk-x1.jpg"
+                srcset="./images/map-desk-x1.jpg 1x, ./images/map-desk-x2.jpg 2x"
               />
               <img
                 src="./images/map-mob-x1.jpg"
                 alt="We are on the map"
+                srcset="./images/map-mob-x1.jpg 1x, ./images/map-mob-x2.jpg 2x"
                 class="location-map"
               />
             </picture>
