--- a/index.html
+++ b/index.html
@@ -1,39 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+      content="width=device-width, initial-scale=1.0">
     <title>Mimino</title>
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="./images/favicon.ico"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/styles-mob.css" />
-    <link rel="stylesheet" href="./css/styles-tab.css" />
-    <link rel="stylesheet" href="./css/styles-desk.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+      href="./images/favicon.ico">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles-mob.css">
+    <link rel="stylesheet" href="./css/styles-tab.css">
+    <link rel="stylesheet" href="./css/styles-desk.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link
       rel="preconnect"
       href="https://fonts.gstatic.com"
-      crossorigin
-    />
+      crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet">
   </head>
   <body>
     <main>
       <!---------- Location & contacts ----------->
 
       <section class="location">
-        <div class="container">
+        <div class="container container-wrap">
           <div class="container-item">
             <h2 class="location-title">LOCATION</h2>
           </div>
@@ -41,18 +37,21 @@
             <picture class="location-map">
               <source
                 media="(min-width: 375px) and (max-width: 768px)"
-                srcset="./images/map-tab-x1.jpg 1x, ./images/map-tab-x2.jpg 2x"
-              />
+                srcset="
+                  ./images/map-tab-x1.jpg 1x,
+                  ./images/map-tab-x2.jpg 2x">
               <source
                 media="(min-width: 769px)"
-                srcset="./images/map-desk-x1.jpg 1x, ./images/map-desk-x2.jpg 2x"
-              />
+                srcset="
+                  ./images/map-desk-x1.jpg 1x,
+                  ./images/map-desk-x2.jpg 2x">
               <img
                 src="./images/map-mob-x1.jpg"
                 alt="We are on the map"
-                srcset="./images/map-mob-x1.jpg 1x, ./images/map-mob-x2.jpg 2x"
-                class="location-map"
-              />
+                srcset="
+                  ./images/map-mob-x1.jpg 1x,
+                  ./images/map-mob-x2.jpg 2x"
+                class="location-map">
             </picture>
           </div>
           <!-- <img class="location-map" src="./images/map-mob-x1.jpg" alt="We are on the map"
